--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^12.1.0",
     "lucide-react": "^0.344.0",
+    "react-router-dom": "^6.26.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.1.2"
@@ -20,9 +21,11 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.9.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
